# silvariumsocial

./: .replit  404.html  CNAME  README.md  app.js  app.py  contact.html  index.html  package-lock.json  package.json  privacy.html  pyproject.toml  replit_zip_error_log.txt  requirements.txt  robots.txt  script.js  sitemap.xml  style.css  styles.css  terms  terms.html
.cache/nix/: binary-cache-v6.sqlite
.cache/replit/env/: latest  latest.json
.cache/replit/nix/: env.json
.local/state/replit/agent/: repl_state.json
.upm/: store.json
Footer/: ndex.html  styles.css
app/services/: ab_test_suggester.py  caption_generator.py  content_repurposer.py  performance_predictor.py
assets/: app.js  i18n.json  legal.js  site.js  style.css
client/src/: App.tsx  main.tsx
client/src/components/: ContentCreator.tsx  LanguageSelector.tsx  PlatformSelector.tsx
client/src/components/layout/: Sidebar.tsx
client/src/contexts/: LocaleContext.tsx
client/src/lib/: platforms.ts  types.ts
client/src/lib/i18n/: index.ts
client/src/lib/i18n/messages/: ar.json  en.json
client/src/pages/: Analytics.tsx  Calendar.tsx  Dashboard.tsx
contact/: index.html
data-deletion/: index.html
db/: schema.ts
docs/: implementation_guide.md
instance/: socialpulse.db
migrations/: env.py
privacy/: index.html
server/: routes.ts
status/: index.html
templates/: index.html  profile.html
terms/: index.html
translations/ar/LC_MESSAGES/: messages.mo  messages.po
translations/en/LC_MESSAGES/: messages.mo  messages.po
